# Gemma3Serving

./: .gitignore  README.md  bench1.sh  bench1_light.sh  bench2.sh  exaone.py  gemma3Ex.py  gemma3ExFP8.py  gemma3ExNVFP4.py  main.py  pyproject.toml  restart.sh  serve.sh  serve0.sh  serve1.sh  serveN4.sh  start.sh  stop.sh  to_fp4.py  view_log.sh
