[project]
name = "gemma3serving"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "hf",
    "torch",
    "torchvision",
    "torchaudio",
    "numpy",
    "llmcompressor",
    "lm-eval",
    "transformers",
    "ninja>=1.13.0",
    "compressed-tensors",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
