[project]
name = "Quantize"
version = "0.1.0"
description = "Model Quantize"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "hf",
    "torch",
    "torchvision",
    "torchaudio",
    "numpy",
    "llmcompressor",
    "lm-eval",
    "transformers==4.57.1",
    "ninja>=1.13.0",
    "compressed-tensors",
    "datasets",
    "psutil"
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
