[project]
name = "Serving"
version = "0.1.0"
description = "Model Serving"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hf",
    "torch",
    "torchvision",
    "torchaudio",
    "numpy",
    "vllm==0.17.1",
    "lm-eval[hf,vllm,api]>=0.4.11",
    "transformers==4.57.1",
    "ninja>=1.13.0",
   # "opencompass==0.5.2"
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
